--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,6 +7,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+  <script src="http://d3js.org/topojson.v1.min.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.3.js"></script>
 
 </head>
